--- a/.github/workflows/github_release.yml
+++ b/.github/workflows/github_release.yml
@@ -44,7 +44,7 @@ jobs:
         uses: Nuitka/Nuitka-Action@main
         with:
           nuitka-version: main
-          script_name: script.py
+          script-name: script.py
           onefile: true
           standalone: true
           enable-plugins: tk-inter
