--- a/.github/workflows/github_release.yml
+++ b/.github/workflows/github_release.yml
@@ -18,6 +18,9 @@ jobs:
           '3.10',
           'pypy-3.9',
         ]
+        exclude:
+          - os: windows-latest
+            python-version: 'pypy-3.9'
     steps:
 
       - name: Checkout Repository
