--- a/.github/workflows/github_release.yml
+++ b/.github/workflows/github_release.yml
@@ -26,6 +26,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
+      - name: Check Version
+        uses: nowsprinting/check-version-format-action@v3
+        id: version
+        with:
+          prefix: 'v'
+
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
@@ -71,6 +77,10 @@ jobs:
            --enable-plugin=tk-inter `
            --disable-console `
            --include-data-dir=src/tccgs/data=data `
+           --windows-company-name="Team DeltaV" `
+           --windows-file-description="A joke program based on a popular credit card scam meme" `
+           --windows-file-version="${{ steps.version.outputs.major_without_prefix }}.${{ steps.version.outputs.minor }}.${{ steps.version.outputs.patch }}" `
+           --windows-product-name="Totally Not Malware" `
            src/tccgs/script.py
 
       - name: Upload Builds
