--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ['poetry-core>=1.0.0', 'wheel',]
+requires = ['poetry-core>=1.2.0', 'wheel', 'nuitka',]
 build-backend = 'poetry.core.masonry.api'
 
 
@@ -23,9 +23,25 @@ __init__.py:F401,F403,F405\
 """
 
 
+[tool.nuitka]  # NOTE: Does not work yet, waiting for support
+assume-yes-for-downloads = true
+disable-console = true
+enable-plugin = ['tk-inter',]
+include-data-dir = [
+    { source = 'src/tccgs/data', destination = 'data' },
+]
+onefile = true
+output-dir = 'build'
+show-scons = true
+standalone = true
+windows-company-name = "Team DeltaV"
+windows-file-description = "A joke program based on a popular credit card scam meme"
+windows-product-name = "Totally Not Malware"
+
+
 [tool.poetry]
 name = 'tsukasa-credit-card-gag-scam'
-version = '1.0.1'
+version = '1.0.2'
 description = "A joke program based on a popular credit card scam meme"
 
 packages = [
@@ -45,7 +61,8 @@ documentation = 'https://github.com/Diapolo10/iplib3/tree/main/docs'
 
 
 [tool.poetry.urls]
-"Windows executable" = 'https://drive.google.com/file/d/1gVKI089Y7Ub7MrqNmRwsvOGZYS3msnIu/view?usp=sharing'
+"Original Windows executable" = 'https://drive.google.com/file/d/1gVKI089Y7Ub7MrqNmRwsvOGZYS3msnIu/view?usp=sharing'
+"Updated executables" = 'https://github.com/Diapolo10/Tsukasa-credit-card-gag-scam/releases'
 
 
 [tool.poetry.dependencies]
@@ -53,12 +70,19 @@ python = '^3.8.1'
 Pillow = '^9.4.0'
 
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
+mypy = '^1.1.1'
+types-pillow = '^9.4.0.17'
+
+
+[tool.poetry.group.linters]
+optional = true
+
+
+[tool.poetry.group.linters.dependencies]
 flake8 = '^6.0.0'
 flake8-pyproject = '^1.2.3'
-mypy = '^1.1.1'
 pylint = '^2.17.1'
-types-pillow = '^9.4.0.17'
 
 
 [tool.pylint.'MESSAGES CONTROL']
