--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,12 +67,13 @@ documentation = 'https://github.com/Diapolo10/iplib3/tree/main/docs'
 
 [tool.poetry.dependencies]
 python = '^3.8.1'
-Pillow = '^9.4.0'
+Pillow = '^9.5.0'
 
 
 [tool.poetry.group.dev.dependencies]
-mypy = '^1.1.1'
+mypy = '^1.2.0'
 types-pillow = '^9.4.0.17'
+ruff = '^0.0.261'
 
 
 [tool.poetry.group.linters]
@@ -87,7 +88,7 @@ pylint = '^2.17.1'
 
 [tool.pylint.'MESSAGES CONTROL']
 max-line-length = 120
-disable = [  # TODO: Improve code so that these can be dropped
+disable = [
     'R0913', # Too many arguments
 ]
 
@@ -105,3 +106,71 @@ addopts = """
 testpaths = [
     'tests',
 ]
+
+
+[tool.ruff]
+select = [
+    'A',   # Builtins
+    'ANN', # Annotations
+    'ARG', # Unused arguments
+    'B',   # Bugbear
+    'BLE', # Blind except
+    'C4',  # Comprehensions
+    'C90', # mccabe
+    'COM', # Commas
+    'DTZ', # Datetimes
+    'ERA', # Commented-out code
+    'EXE', # Executable
+    'G',   # Logging format
+    'I',   # Isort
+    'ICN', # Import conventions
+    'INP', # Disallow PEP-420 (Implicit namespace packages)
+    'INT', # gettext
+    'ISC', # Implicit str concat
+    'N',   # PEP-8 Naming
+    'NPY', # Numpy
+    'PGH', # Pygrep hooks
+    'PIE', # Unnecessary code
+    'PL',  # Pylint
+    'PT',  # Pytest
+    'PTH', # Use Pathlib
+    'PYI', # Stub files
+    'RET', # Return
+    'RUF', # Ruff
+    'RSE', # Raise
+    'S',   # Bandit
+    'SIM', # Code simplification
+    'SLF', # Private member access
+    'T20', # Print
+    'TCH', # Type checking
+    'TID', # Tidy imports
+    'UP',  # Pyupgrade
+    'W',   # Warnings
+    'YTT', # sys.version
+]
+ignore = [
+    'PLR0913',  # Too many arguments
+]
+ignore-init-module-imports = true
+line-length = 120
+
+[tool.ruff.mccabe]
+# Unlike Flake8, default to a complexity level of 10.
+max-complexity = 10
+
+[tool.ruff.per-file-ignores]
+# F401: Ignore "unused" imports
+# F403: Ignore star imports
+# F405: Ignore names from star imports
+'__init__.py' = ['F401','F403','F405',]
+'tests/*' = ['ARG', 'S101',]
+
+[tool.ruff.pylint]
+max-args = 15
+max-branches = 20
+max-returns = 10
+max-statements = 80
+
+[tool.ruff.flake8-tidy-imports]
+# Disallow all relative imports.
+ban-relative-imports = "all"
