--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -12,7 +12,20 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Run Ruff
-      uses: chartboost/ruff-action@v1
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v4
       with:
-        args: "--fix"
+        python-version: '3.10'
+
+    - name: Install Poetry
+      uses: Gr1N/setup-poetry@v8
+
+    - name: Install library and dependencies
+      run: |
+        poetry run pip install --upgrade pip setuptools
+        poetry install --only linters
+
+    - name: Lint with Ruff
+      run: |
+        # Stop the build if there are Python syntax errors or undefined names
+        poetry run ruff check --fix .
