--- a/.github/workflows/dependabot_updates.yml
+++ b/.github/workflows/dependabot_updates.yml
@@ -1,7 +1,7 @@
 # This workflow enables Dependabot to automatically merge dependency updates
 
 name: Dependabot reviewer
-on: pull_request
+on: [ push, pull_request ]
 
 permissions:
   contents: write
