Work towards importlib.resources conversion

--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -2,7 +2,10 @@
 
 name: Ruff
 
-on: [ push, pull_request ]
+on:
+  push:
+    branches:
+      - '**'
 
 jobs:
   ruff:
@@ -12,10 +15,10 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up Python 3.10
+    - name: Set up Python 3.11
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: '3.11'
 
     - name: Install Poetry
       uses: Gr1N/setup-poetry@v8
