--- a/.github/workflows/github_release.yml
+++ b/.github/workflows/github_release.yml
@@ -15,12 +15,13 @@ jobs:
       matrix:
         os: [ ubuntu-latest, windows-latest ]
         python-version: [
-          '3.10',
-          'pypy-3.9',
+          '3.11',
+          # 'pypy-3.10',
         ]
-        exclude:
-          - os: windows-latest
-            python-version: 'pypy-3.9'
+        # exclude:
+        #   - os: windows-latest
+        #     python-version: 'pypy-3.10'
+
     steps:
 
       - name: Checkout Repository
